# pi-sensors

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml
docker/: services.compose.yml
frontend/: .gitignore  Dockerfile  nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/components/: SensorCard.vue
frontend/app/composables/: useApiBase.ts
frontend/app/pages/: index.vue
src/pi_sensors/: main.py
src/pi_sensors/sensors/: bme688.py  dtof.py  nfc.py  pir.py
tests/: conftest.py  test_api.py  test_audio.py  test_bme688.py  test_dtof.py  test_nfc.py  test_pir.py
